change about to profile

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <script src="app/app.js"></script>
 
     <script src="app/modules/home.js"></script>
-    <script src="app/modules/about.js"></script>
+    <script src="app/modules/profile.js"></script>
     <script src="app/modules/auth.js"></script>
   </head>
   <body ng-app="app" ng-controller="AppCtrl">
@@ -42,8 +42,8 @@
               </a>
             </li>
             <li ui-sref-active="active">
-              <a href ui-sref="about">
-                About
+              <a href ui-sref="profile">
+                Profile
               </a>
             </li>
           </ul>
