--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
     <script src="app/modules/home.js"></script>
     <script src="app/modules/profile.js"></script>
     <script src="app/modules/auth.js"></script>
+    <script src = "app/modules/checkbox.js"></script>
   </head>
   <body ng-app="app" ng-controller="AppCtrl">
 
