--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,15 @@
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/ng-image-gallery/dist/ng-image-gallery.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css"> <!--we use it from the bootstrap gallery example-->
 
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="node_modules/ng-image-gallery/dist/ng-image-gallery.min.js"></script>
     <script src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
+    <script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" ></script> <!--we use it from the bootstrap gallery example-->
+    <script src = "app/script.js"></script> <!--we use it from the bootstrap gallery example-->
 
     <script src="app/app.js"></script>
 
