--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,17 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/ng-image-gallery/dist/ng-image-gallery.min.css">
+    <link rel="stylesheet" href="node_modules/angular-bootstrap-lightbox/dist/angular-bootstrap-lightbox.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="css/style.css"> <!--we use it from the bootstrap gallery example-->
+    <link rel = "stylesheet" href = "css/styleLightboxPictures.css"> <!-- we copy this styles from the picture lightbox example-->
 
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="node_modules/ng-image-gallery/dist/ng-image-gallery.min.js"></script>
     <script src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
+    <script src="node_modules/angular-bootstrap-lightbox/dist/angular-bootstrap-lightbox.js"></script>
     <script src="app/app.js"></script>
 
     <script src="app/modules/home.js"></script>
