--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
     <script src="app/modules/profile.js"></script>
     <script src="app/modules/auth.js"></script>
     <script src = "app/modules/checkbox.js"></script>
+    <script src = "app/modules/example.js"></script>
   </head>
   <body ng-app="app" ng-controller="AppCtrl">
 
